tgthrProgramManagement/force-app/main/default/objects/Audit_Log__c/fields/Access_Context__c.field-meta.xml
<CustomField>
    <fullName>Access_Context__c</fullName>
    <description>Context explaining the user&apos;s relationship to the accessed record.</description>
    <inlineHelpText>e.g., Case Owner, Program Team Member, Supervisor, Search Result, Direct Navigation</inlineHelpText>
    <label>Access Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>