tgthrProgramManagement/force-app/main/default/objects/Audit_Log__c/fields/Amendment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Reason__c</fullName>
    <description>Required reason/justification for amending a locked record.</description>
    <inlineHelpText>Reason provided when amending a record after the 72-hour window.</inlineHelpText>
    <label>Amendment Reason</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>