tgthrProgramManagement/force-app/main/default/objects/Audit_Log__c/fields/Audit_JSON__c.field-meta.xml
<CustomField>
    <fullName>Audit_JSON__c</fullName>
    <description>Full JSON payload or serialized event log</description>
    <label>Audit JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>