tgthrProgramManagement/force-app/main/default/objects/Audit_Log__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <description>Name of the client/participant whose record was accessed (for audit reports).</description>
    <label>Client Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>