tgthrProgramManagement/force-app/main/default/objects/Audit_Log__c/fields/Compliance_Reference__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Reference__c</fullName>
    <description>Applicable compliance standard or citation (e.g., HIPAA §164.312)</description>
    <label>Compliance Reference</label>
    <type>TextArea</type>
</CustomField>