tgthrProgramManagement/force-app/main/default/objects/Audit_Log__c/fields/Created_by_Integration__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates event was logged by integration system</description>
    <label>Created by Integration</label>
    <type>Checkbox</type>
</CustomField>