tgthrProgramManagement/force-app/main/default/objects/Audit_Log__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Details about the event</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>