tgthrProgramManagement/force-app/main/default/objects/Audit_Log__c/fields/Has_Legitimate_Access__c.field-meta.xml
<CustomField>
    <fullName>Has_Legitimate_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the user has a legitimate relationship to the record (case owner, team member, supervisor, etc.)</description>
    <inlineHelpText>True if user is assigned to the case/program or is a supervisor.</inlineHelpText>
    <label>Has Legitimate Access</label>
    <type>Checkbox</type>
</CustomField>