tgthrProgramManagement/force-app/main/default/objects/Audit_Log__c/fields/Is_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Is_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this log entry is for an amendment to a locked record.</description>
    <inlineHelpText>True if the user amended a record that was already locked (post 72-hour edit).</inlineHelpText>
    <label>Is Amendment</label>
    <type>Checkbox</type>
</CustomField>