tgthrProgramManagement/force-app/main/default/objects/Audit_Log__c/fields/Is_Curiosity_Browse__c.field-meta.xml
<CustomField>
    <fullName>Is_Curiosity_Browse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this record access appears to be curiosity browsing (non-assigned user viewing PHI).</description>
    <inlineHelpText>Flagged when a user views a record they are not directly assigned to.</inlineHelpText>
    <label>Is Curiosity Browse</label>
    <type>Checkbox</type>
</CustomField>