tgthrProgramManagement/force-app/main/default/objects/Audit_Log__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <description>Type of object being logged</description>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>