tgthrProgramManagement/force-app/main/default/objects/Audit_Log__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>Type of record affected</description>
    <label>Record Type</label>
    <length>52</length>
    <type>Text</type>
</CustomField>