tgthrProgramManagement/force-app/main/default/objects/Audit_Log__c/fields/Retention_Policy__c.field-meta.xml
<CustomField>
    <fullName>Retention_Policy__c</fullName>
    <description>Applicable record retention policy reference</description>
    <label>Retention Policy</label>
    <type>TextArea</type>
</CustomField>