tgthrProgramManagement/force-app/main/default/objects/Audit_Log__c/fields/Source_IP__c.field-meta.xml
<CustomField>
    <fullName>Source_IP__c</fullName>
    <label>Source IP</label>
    <length>52</length>
    <type>Text</type>
</CustomField>