tgthrProgramManagement/force-app/main/default/objects/Audit_Log__c/fields/Supervisor_Override__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this action was performed with supervisor override privileges.</description>
    <label>Supervisor Override</label>
    <type>Checkbox</type>
</CustomField>