tgthrProgramManagement/force-app/main/default/objects/Audit_Log__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Exact time of event</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>