tgthrProgramManagement/force-app/main/default/objects/Audit_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Application__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Event_Type__c</columns>
    <columns>Platform__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>